--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.example.calorificator'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.calorificator"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -61,4 +61,15 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+    // CameraX
+    def camerax_version = "1.1.0"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:1.1.0"
+
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+
+    // Coil
+    implementation "io.coil-kt:coil-compose:1.4.0"
 }
