--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
+    // lottie
+    implementation 'com.airbnb.android:lottie-compose:5.2.0'
+
     // CameraX
     def camerax_version = "1.1.0"
     implementation "androidx.camera:camera-camera2:$camerax_version"
