--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
     <uses-feature android:name="android.hardware.camera2.any" />
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
@@ -23,6 +22,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Calorificator"
         tools:targetApi="31">
+        <activity
+            android:name=".ImageView3"
+            android:exported="false"
+            android:label="@string/title_activity_image_view3"
+            android:theme="@style/Theme.Calorificator" />
+        <activity
+            android:name=".PredictionActivity2"
+            android:exported="false"
+            android:label="@string/title_activity_prediction2"
+            android:theme="@style/Theme.Calorificator" />
+        <activity
+            android:name=".ImageView2"
+            android:exported="false"
+            android:label="@string/title_activity_image_view2"
+            android:theme="@style/Theme.Calorificator" />
+        <activity
+            android:name=".ImageView"
+            android:exported="false"
+            android:label="@string/title_activity_image_view"
+            android:theme="@style/Theme.Calorificator" />
         <activity
             android:name=".PredictionActivity"
             android:exported="false" />
