--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.calorificator'
+    namespace 'com.example.calorifyi'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.calorificator"
+        applicationId "com.example.calorifyi"
         minSdk 21
         targetSdk 33
         versionCode 1
