Onboarding Screen Update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.calorificator">
+    package="com.example.calorifyi">
 
     <uses-feature android:name="android.hardware.camera2.any" />
 
@@ -16,29 +16,29 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/calorifyi"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Calorificator"
+        android:theme="@style/Theme.CaloriFyi"
         tools:targetApi="31">
         <activity
             android:name=".PredictionActivity"
             android:exported="false" />
         <activity
-            android:name=".CameraActivity"
+            android:name="com.example.calorifyi.CameraActivity"
             android:exported="false"
             android:label="@string/title_activity_camera"
-            android:theme="@style/Theme.Calorificator">
+            android:theme="@style/Theme.CaloriFyi">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.calorifyi.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Calorificator">
+            android:theme="@style/Theme.CaloriFyi">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
