--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
@@ -79,6 +78,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
+
     // lottie
     implementation 'com.airbnb.android:lottie-compose:5.2.0'
 
@@ -93,7 +93,7 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
 
     // Coil
-    implementation "io.coil-kt:coil-compose:1.4.0"
+    implementation "io.coil-kt:coil-compose:2.2.2"
 
     // accompanist
     implementation "com.google.accompanist:accompanist-pager:0.24.13-rc"
@@ -101,4 +101,10 @@ dependencies {
 
     implementation("androidx.compose.material3:material3:1.0.1")
     implementation("androidx.compose.material3:material3-window-size-class:1.0.1")
+
+    //JDBC driver
+    implementation 'net.sourceforge.jtds:jtds:1.3.1'
+
+    //Hikari CP for Connection pooling
+    implementation("com.zaxxer:HikariCP:5.0.0")
 }
