Successful creation of login and signup and connectivity with DB. Also the upation of after image process activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,6 @@ dependencies {
 
     //Hikari CP for Connection pooling
     implementation("com.zaxxer:HikariCP:5.0.0")
+
+//    implementation "javax.security.sasl:sasl-api:1.0.1"
 }
