--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
         android:theme="@style/Theme.CaloriFyi"
         tools:targetApi="31">
         <activity
+            android:name=".SignUp"
+            android:exported="false"
+            android:label="@string/title_activity_sign_up"
+            android:theme="@style/Theme.CaloriFyi" />
+        <activity
             android:name=".ReceptionActivity"
             android:exported="false"
             android:label="@string/title_activity_reception"
