reception activity updated with other macros and Signup banner change

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,4 +110,5 @@ dependencies {
     implementation("com.zaxxer:HikariCP:5.0.0")
 
 //    implementation "javax.security.sasl:sasl-api:1.0.1"
+    implementation "androidx.compose.foundation:foundation:1.0.0-alpha08"
 }
