--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,9 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+        maven {
+            url "https://google.bintray.com/mlkit"
+        }
     }
 }
 dependencyResolutionManagement {
@@ -10,6 +13,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://google.bintray.com/mlkit"
+        }
     }
 }
 rootProject.name = "CaloriFyi"
